package com.kco.pattern.facade.demo;

/**
 * Created by Administrator on 2017/5/12.
 */
public class Television {
    public void on(){
        System.out.println("开电视....");
    }

    public void off(){
        System.out.println("关电视....");
    }
}
